--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shubhamzing.github.io/new-aern-website",
+  "homepage": "https://aern.money",
   "name": "aern-website",
   "version": "0.1.0",
   "private": false,
